Updated Hero section and added sign up button and image
Add camera.jpg to hero(main) section
specified height and width to camera image
Add "sign-up" button, no decorations
Formatted Hero text, font, color

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -21,5 +21,19 @@
             </ul>
         </div>        
     </div>
+    <div class="main-container">
+    <div class="main">
+        <div class="hero">
+            This website is awesome
+        </div>
+        <div class="secondary">
+            This is subtext that goes below the main title in smaller font, the font color is lower contrast
+        </div>
+        <div class="button">
+              <button type="submit">Sign up</button>
+        </div>
+    </div>
+        <img src="camera.jpg"> 
+    </div>           
 </body>
 </html>
