--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -33,7 +33,18 @@
               <button type="submit">Sign up</button>
         </div>
     </div>
-        <img src="camera.jpg"> 
-    </div>           
+            <img id="main-img" src="camera.jpg" alt="Camera Image">   
+    </div>
+    
+    <div class="second-section">
+        Some random information
+    
+        <div class="small-images">
+            <img id="secondary-images" src="small-camera1.jpg" alt="Retro Camera">
+            <img id="secondary-images"  src="small-camera2.jpg" alt="Film Roll"> 
+            <img id="secondary-images"  src="small-camera3.jpg" alt="Modern camera">
+            <img id="secondary-images"  src="small-camera4.jpg" alt="Camera on tripod">
+        </div>          
+    </div>   
 </body>
 </html>
