Finshed aligning and organizing the "information" section
aligned 4 camera photos with subtext
fromatted section heading

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -36,15 +36,27 @@
             <img id="main-img" src="camera.jpg" alt="Camera Image">   
     </div>
     
-    <div class="second-section">
+    <div class="information">
         Some random information
     
         <div class="small-images">
-            <img id="secondary-images" src="small-camera1.jpg" alt="Retro Camera">
-            <img id="secondary-images"  src="small-camera2.jpg" alt="Film Roll"> 
-            <img id="secondary-images"  src="small-camera3.jpg" alt="Modern camera">
-            <img id="secondary-images"  src="small-camera4.jpg" alt="Camera on tripod">
-        </div>          
-    </div>   
+            <div class="image-container">
+                <img class="secondary-images" src="small-camera1.jpg" alt="Retro Camera">
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+                <img class="secondary-images" src="small-camera2.jpg" alt="Film Roll">
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+                <img class="secondary-images" src="small-camera3.jpg" alt="Modern camera">
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="image-container">
+                <img class="secondary-images" src="small-camera4.jpg" alt="Camer lense">
+                <div class="subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>        
+    </dihmmv>  
 </body>
 </html>
