Added quote section, call to action section and footer
Aligned quote text and author name
formatted text
Add background coloring

Add call to action section with text and sign up button
formatted and aligned text
formatted and aligned sign up button

Added a footer

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -29,9 +29,7 @@
         <div class="secondary">
             This is subtext that goes below the main title in smaller font, the font color is lower contrast
         </div>
-        <div class="button">
-              <button type="submit">Sign up</button>
-        </div>
+        <button class="main-button" type="submit">Sign up</button>
     </div>
             <img id="main-img" src="camera.jpg" alt="Camera Image">   
     </div>
@@ -56,7 +54,29 @@
                 <img class="secondary-images" src="small-camera4.jpg" alt="Camer lense">
                 <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
-        </div>        
-    </dihmmv>  
+        </div>
+    </div>
+    
+    <div class="quote-section">
+        <div class="quote"> To surround anything, however monstrous or ridiculous, with an air of mystery, 
+            is to invest it with a secret charm, and power of attraction which to the crowd is irresistible. 
+        </div>
+        <div class="author">- <u>Barnaby Rudge</u> by Charles Dickens </div>
+    </div>
+
+    <div class="action-section">
+        <div class="action-container"> <!-- this holds a container for words, and a button, flex-drection - column -->
+            <div class="action-text-container">
+                <div class="action-text"><b>Call to action! it's time!</b> </div>
+                <div class="action-text">Sign up for our product by clicking that button right over here! </div>  
+            </div>
+            <button class="action-button" type="submit">Sign up </button>
+        </div>
+    </div>
+
+    <footer>
+        Copyright &copy; Steven Herrera 2025
+    </footer>
+
 </body>
 </html>
